# curriculum-david-vidal-ramirez

./: LICENSE  README.md  auditoria_completa_proyecto.txt  pyproject.toml
config/: about.yml  blog.yml  contact.yml  navbar.yml  profile.yml  projects.yml  resume.yml
src/css/: style.css
src/jinja/: about.j2  index.j2  meta.j2
